--- a/Doc/whatsnew/3.8.rst
+++ b/Doc/whatsnew/3.8.rst
@@ -174,6 +174,10 @@ Changes in Python behavior
   in the leftmost :keyword:`for` clause).
   (Contributed by Serhiy Storchaka in :issue:`10544`.)
 
+* An interpreter on macOS system now supports ``USE_STACKCHECK``. The interpreter
+  detects running out of stack space and raise MemoryError.
+  (Contributed by Dong-hee Na in :issue:`33955`.)
+
 
 Changes in the Python API
 -------------------------
