--- a/Misc/NEWS.d/next/C API/2018-07-24-11-57-35.bpo-34193.M6ch1Q.rst
+++ b/Misc/NEWS.d/next/C API/2018-07-24-11-57-35.bpo-34193.M6ch1Q.rst
@@ -1,2 +1,2 @@
-Fix pluralization in TypeError messages in getargs.c: '1 argument' instead
-of '1 arguments' and '1 element' instead of '1 elements'.
+Fix pluralization in TypeError messages in getargs.c and typeobject.c:
+'1 argument' instead of '1 arguments' and '1 element' instead of '1 elements'.
